--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "new-shopping-cart",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://yousefissa.github.io/eecs-394-shopping-cart/",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "node-sass": "^4.11.0",
@@ -14,9 +13,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run-script build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
